# Layout-Analysis

./: CMakeLists.txt  GapfillingSmoothing.cpp  ImageProcFunctions.cpp  ParagraphDetection.cpp  PixelValidation.cpp  RectangleTest.cpp  binarization.cpp  connectedcomponent.cpp  morphology.cpp  myheader.h  readme.txt  schemaParser.cpp  schema_ocr.xsd  xml.cpp  xml.h  xmlParser.cpp  xmlParser.h
